# src

./: controller_gazebo.sh  controller_real.sh  eb_observer_real.sh  mb_observer_real.sh
franka_control/launch/: franka_control.launch
franka_example_controllers/: CMakeLists.txt  franka_example_controllers_plugin.xml
franka_example_controllers/cfg/: admittance_controller.cfg  dynamic_control_param.cfg  impedance_controller.cfg  nocontact_impedance_controller.cfg  nullspace_impedance_EBobserver_controller.cfg  nullspace_impedance_MBobserver_controller.cfg  nullspace_impedance_controller.cfg  nullspace_impedance_param.cfg
franka_example_controllers/config/: franka_example_controllers.yaml
franka_example_controllers/include/: GP.h  MeanFunction.h  armadillo_backsub.h
franka_example_controllers/include/algorithm/: pseudo_inversion.h
franka_example_controllers/include/franka_example_controllers/: admittance_controller.h  admittance_dyn_controller.h  cartesian_impedance_controller.h  cartesian_impedance_example_controller.h  cartesian_pose_example_controller.h  cartesian_velocity_example_controller.h  dynamic_control_controller.h  elbow_example_controller.h  force_example_controller.h  joint_impedance_controller.h  joint_impedance_example_controller.h  joint_position_example_controller.h  joint_velocity_example_controller.h  model_example_controller.h  nocontact_impedance_controller.h  nullspace_impedance_EBobserver_controller.h  nullspace_impedance_MBobserver_controller.h  nullspace_impedance_controller.h  pinocchino_interactive.h  pseudo_inversion.h  trajectory.h
franka_example_controllers/launch/: cartesian_dynamic_control_controller.launch  joint_dynamic_control_controller.launch  nocontact_impedance_controller.launch  nullspace_impedance_EBobserver_controller.launch  nullspace_impedance_MBobserver_controller.launch  nullspace_impedance_controller.launch  showRobot.launch
franka_example_controllers/msg/: admittanceControllerMsg.msg  nocontactImpedanceMsg.msg  paramForDebug.msg
franka_example_controllers/src/: GP.cpp  KernelFunction.cpp  MeanFunction.cpp  cartesian_impedance_example_controller.cpp  cartesian_pose_example_controller.cpp  cartesian_velocity_example_controller.cpp  dual_arm_cartesian_impedance_example_controller.cpp  dynamic_control_controller.cpp  elbow_example_controller.cpp  force_example_controller.cpp  hps_sensor.cpp  joint_impedance_example_controller.cpp  joint_position_example_controller.cpp  joint_velocity_example_controller.cpp  joint_wall.cpp  manipulator.cpp  model_example_controller.cpp  nullspace_impedance_EBobserver_controller.cpp  nullspace_impedance_MBobserver_controller.cpp  nullspace_impedance_controller.cpp  pinocchino_interactive.cpp  teleop_gripper_node.cpp  teleop_joint_pd_example_controller.cpp  trajectory.cpp
franka_example_controllers/src/admittance_controller/: admittance_controller.cpp  admittance_dyn_controller.cpp
franka_example_controllers/src/impedance_controller/: cartesian_impedance_controller.cpp  joint_impedance_controller.cpp
franka_example_controllers/src/nocontact_impedance/: nocontact_impedance_controller.cpp
franka_example_controllers/src/nullSpace_impedance/: nullspace_impedance_EBobserver_controller.cpp  nullspace_impedance_MBobserver_controller.cpp  nullspace_impedance_controller.cpp
franka_example_controllers/src/robust_controller/: robust_controller.cpp
franka_gazebo/: CMakeLists.txt  package.xml
franka_gazebo/config/: sim_controllers.yaml
franka_gazebo/launch/: panda.launch  robot.launch
franka_gazebo/src/: franka_hw_sim.cpp
main_controller/: CMakeLists.txt  main_controller_plugin.xml  package.xml
main_controller/cfg/: main_controller.cfg
main_controller/config/: franka_example_controllers.yaml
main_controller/include/main_controller/: controller.h  main_controller.h  myrobot.h  pinocchino_interactive.h
main_controller/launch/: joint_dynamic_control_controller.launch
main_controller/msg/: paramForDebug.msg
main_controller/src/: controller_manager.cpp  main_controller.cpp  myrobot.cpp  pinocchino_interactive.cpp
main_controller/src/algorithm/: pinocchino_interactive.cpp
main_controller/src/controller/: controller.cpp  controller.h  controller.hpp
main_controller/src/controllerLaw/: controllerLaw.cpp  controllerLaw.h
panda_controller/: CMakeLists.txt  package.xml  panda_controller_plugin.xml
panda_controller/cfg/: pandaController.cfg
panda_controller/config/: pandaController.xml  pandaController.yaml
panda_controller/include/: tmp.h
panda_controller/launch/: PandaController.launch  importURDF.launch  plotPanda.launch
panda_controller/src/algorithm/: PinocchioDynLibManager.hpp  calPseudoInverseMatrix.hpp  pandaDynLibManager.cpp  pandaDynLibManager.h  pinocchino_interactive.cpp  pinocchino_interactive.h  pseudo_inversion.h
panda_controller/src/communication/: communication.cpp  communication.h
panda_controller/src/controller/: UR5Controller.h  computedTorqueMethod.cpp  controller.hpp  pandaController.cpp  pandaController.h
panda_controller/src/controllerLaw/: PD.cpp  backstepping.cpp  computedTorqueMethod.cpp  controllerLaw.hpp
panda_controller/src/planner/: planner.hpp
panda_controller/src/robot/: robot.hpp
panda_controller/src/robotController/: controller.hpp  pandaController.cpp  pandaController.h
panda_controller/src/rosController/: backup.h  main_controller_backup.cpp  pandaController.cpp  pandaController.h  pandaRosController.cpp  pandaRosController.h
panda_controller/src/trajectory/: trajectory.hpp
sh/: cartesian_impedance_gazebo.sh  cartesian_impedance_real.sh  eb_observer_gazebo.sh  joint_impedance_gazebo.sh  joint_impedance_real.sh  mb_observer_gazebo.sh  move_to_start.sh  none_observer_gazebo.sh  none_observer_real.sh  plot.sh  robust_controller_gazebo.sh  robust_controller_real.sh
test_pinocchio_pkg/: CMakeLists.txt  package.xml
test_pinocchio_pkg/launch/: pin.launch  pin2.launch
test_pinocchio_pkg/scripts/: test01.py  tmp.txt  tmp2.txt
test_pinocchio_pkg/src/: test01_node.cpp  test02_node.cpp
(+8 files in other folders)
